@@ -8,6 +8,7 @@ version <next>:
 - Alias muxer for Ogg Video (.ogv)
 - VP8 in Ogg muxing
 - curves filter doesn't automatically insert points at x=0 and x=1 anymore
+- 16-bit support in curves filter
 
 
 version 3.1:
